--- a/statistique 2.html
+++ b/statistique 2.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Stats Basket — Outil Pro</title>
-
+<head> ... </head>
+<body> ... </body>
+</html>
 <!-- Exports -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
@@ -365,4 +363,5 @@ renderAll();
 </script>
 </body>
 </html>
+
 
